--- a/package.json
+++ b/package.json
@@ -3,13 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
+    "start-dev": "cross-env NODE_ENV=production node server.js",
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "cross-env": "^7.0.2",
+    "express": "^4.17.1",
     "next": "10.0.1",
+    "next-routes": "^1.4.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-typed": "^1.2.0",
+    "reactstrap": "^8.7.1",
+    "sass": "^1.29.0",
+    "swr": "^0.3.9"
   }
 }
