--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "bootstrap": "^4.5.3",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "next": "10.0.1",
     "next-routes": "^1.4.2",
     "react": "17.0.1",
     "react-datepicker": "^3.3.0",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.11.3",
+    "react-resize-detector": "^5.2.0",
     "react-toastify": "^6.1.0",
     "react-typed": "^1.2.0",
     "reactstrap": "^8.7.1",
